Lesson 9 fixes